--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "2.8.7",
     "style-loader": "^3.3.2",
+    "url-loader": "^4.1.1",
     "webpack": "^5.79.0",
     "webpack-cli": "^5.0.1"
   },
